compiler/src/snapshots/tests__parse_assignment_constant.snap
---
source: compiler/src/parser.rs
expression: let x = 47
---
Ok(
    Module {
        start: 0,
        end: 10,
        imports: [],
        body: [
            Assignment {
                start: 0,
                end: 10,
                is_constant: true,
                left: Identifier {
                    start: 4,
                    end: 5,
                    name: "x",
                    inferred_type: Unknown,
                },
                right: NumericLiteral {
                    start: 8,
                    end: 10,
                    value: Int(
                        47,
                    ),
                    raw_value: "47",
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
