compiler/src/snapshots/tests__parse_comment_after.snap
---
source: compiler/src/parser.rs
expression: "something\n\n# a comment after"
---
Parsed(
    Module {
        body: [
            Identifier {
                line: 0,
                col_start: 0,
                col_end: 9,
                name: "something",
                inferred_type: Unknown,
            },
        ],
        comments: {
            2: Comment {
                line: 2,
                col_start: 0,
                col_end: 16,
                value: " a comment after",
            },
        },
    },
)
