compiler/src/snapshots/tests__parse_comment_before.snap
---
source: compiler/src/parser.rs
expression: "# a comment before\nsomething"
---
Parsed(
    Module {
        body: [
            Identifier {
                line: 1,
                col_start: 0,
                col_end: 9,
                name: "something",
                inferred_type: Unknown,
            },
        ],
        comments: {
            0: Comment {
                line: 0,
                col_start: 0,
                col_end: 17,
                value: " a comment before",
            },
        },
    },
)
