compiler/src/snapshots/tests__parse_comment_same_line.snap
---
source: compiler/src/parser.rs
expression: "something # a comment on the same line\nsomethingElse"
---
Parsed(
    Module {
        body: [
            Identifier {
                line: 0,
                col_start: 0,
                col_end: 9,
                name: "something",
                inferred_type: Unknown,
            },
            Identifier {
                line: 1,
                col_start: 0,
                col_end: 13,
                name: "somethingElse",
                inferred_type: Unknown,
            },
        ],
        comments: {
            0: Comment {
                line: 0,
                col_start: 10,
                col_end: 37,
                value: " a comment on the same line",
            },
        },
    },
)
