compiler/src/snapshots/tests__parse_empty.snap
---
source: compiler/src/parser.rs
expression: ""
---
Ok(
    Module {
        start: 0,
        end: 0,
        body: [],
    },
)
