compiler/src/snapshots/tests__parse_identifier.snap
---
source: compiler/src/parser.rs
expression: hello
---
Parsed(
    Module {
        body: [
            Identifier {
                line: 0,
                col_start: 0,
                col_end: 5,
                name: "hello",
                inferred_type: Unknown,
            },
        ],
        comments: {},
    },
)
