compiler/src/snapshots/tests__parse_number.snap
---
source: compiler/src/parser.rs
expression: "47"
---
Ok(
    Module {
        start: 0,
        end: 2,
        body: [
            NumericLiteral {
                start: 0,
                end: 2,
                value: Int(
                    47,
                ),
                raw_value: "47",
                inferred_type: Unknown,
            },
        ],
    },
)
